# python-experiments

./: .gitignore  Dockerfile  clear.py  compose.yaml  pyproject.toml
experiments/: __init__.py  experiment.py
items/: __init__.py  item.py
src/experiments/: experiment.py
src/items/: item.py
